fix overflow

--- a/front-end/src/styles.css
+++ b/front-end/src/styles.css
@@ -6,5 +6,6 @@ body {
   position: relative;
   min-height: 100vh;
   margin: 0;
+  overflow: hidden;
   background: url("./assets/images/fond.png") no-repeat center center fixed;
 }
